Fixed users button being a little off-center

--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -133,6 +133,7 @@ textarea {
 .chat-input-button {
     margin-left: 8px;
     margin-right: 2px;
+    margin-top:4px;
     cursor: pointer;
     transition: filter .3s;
     align-self: center;    
